# opencv-python

./: .gitignore  LICENSE  README.md  setup.cfg
src/: dummy.py
