[metadata]
name = opencv-python
version = 4.5.1.48
author = Tarnyko
author_email = tarnyko@tarnyko.net
description = A placeholder OpenCV PIP package
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/Tarnyko/opencv-python

[options]
python_requires = >= 3.6, <4
install_requires =
    pip
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
